# chart_detection

./: .gitignore  README.md  REPOSITORY_AUDIT.md  config.py  kaggle_train.py  pyproject.toml  requirements.txt
configs/: default.yaml  pipeline.yaml  smoke_test.yaml
docs/: COMPREHENSIVE_MIGRATION_DOCUMENT.md  IMPLEMENTATION_MILESTONES.md  MIGRATION_AUDIT.md  MIGRATION_PLAN.md  kaggle_setup.md  new_implementation_milestones.md
paper/: ARCHITECTURE_DESIGN.md  RESEARCH_BLUEPRINT.md  RESEARCH_REDESIGN.md  REUSE_ANALYSIS.md  experiment_plan.md  final_methodology.md  final_research_question.md  idea_evaluation.md  literature_review.md
scripts/: check_image_resolution.py  debug_pipeline.py  demo_experiment.py  download_test_images.py  generate_dataset.py  main.py  research_pipeline_final.py  research_pipeline_v3.py
src/: __init__.py  download_datasets.py  generate_synthetic.py
src/caching/: __init__.py  ocr_cache.py
src/classifier/: chart_classifier.py  classification_milestone.py  ml_classifier.py  validation_milestone.py
src/config/: __init__.py  constants.py  settings.py
src/dataset/: __init__.py  dataset_manager.py  unified_loader.py  versioning.py
src/detection/: __init__.py  yolo_detector.py
src/evaluation/: __init__.py  evaluator.py  research_evaluator.py
src/experiments/: __init__.py  ablation.py  benchmark.py
src/extraction/: value_extractor.py
src/feature_extraction/: geometric_features.py
tests/: conftest.py  test_cnn_classifier.py  test_config.py  test_dataset.py  test_fingerprint.py  test_image_resolution.py  test_milestone2.py
(+35 files in other folders)
